# PHPShell-Obfuscator

./: README.md  helper.php  helper.ps1  helper.py  helper.sh  reverse-shell.php
C++/: CMakeLists.txt  Makefile  helper.cpp
JS/: helper.js
Ruby/: helper.rb
website/: index.html
windows/: helper.bat  helper.cs
