# Minimum required version of CMake
cmake_minimum_required(VERSION 3.10)

# Project name
project(Helper)

# Set the C++ standard
set(CMAKE_CXX_STANDARD 11)

# Add executable target
add_executable(helper helper.cpp)

# Optionally, if you want to install the program or specify custom targets, you can add more configuration here.

